# ophelia

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: CONTRIBUTING.md  actionlint.yaml  gpui-ce-ref  gpui-oe-ref  release-pipeline.md
.github/workflows/: ci.yml  nightly-macos.yml  release-macos.yml
assets/: AppIcon.icns
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/benches/: disk_data.rs  http_range_data.rs  service_codec_data.rs  session_events.rs
crates/core/src/: config.rs  disk.rs  lib.rs  session.rs
crates/core/src/engine/: actor.rs  alloc.rs  controller.rs  destination.rs  mod.rs  provider.rs  runner.rs  spec.rs  types.rs
crates/core/src/engine/http/: chunk_map.rs  config.rs  disk_writer.rs  events.rs  mod.rs  probe.rs  range_runner.rs  range_worker.rs  scheduler.rs  single.rs  task.rs  throttle.rs
crates/core/src/engine/state/: db.rs  http.rs  mod.rs
crates/core/src/service/: client.rs  codec.rs  host.rs  lock.rs  macos_startup.rs  mod.rs  read_model.rs  tests.rs  transfer_runtime.rs  wire.rs  xpc.rs
crates/core/src/service/xpc/: command.rs  ffi.rs  mod.rs  peer.rs  subscribe.rs
crates/core/src/session/: client.rs  host.rs  lock.rs  mod.rs  read_model.rs  tests.rs  wire.rs
crates/core/tests/: download_basic.rs  download_concurrency.rs  download_known_bugs.rs  download_pause.rs  engine_notifications.rs  service_updates_perf.rs
crates/core/tests/common/: mod.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: README.md  app.rs  app_actions.rs  build_info.rs  engine.rs  ipc.rs  main.rs  runtime.rs  service_services.rs  theme.rs  tray.rs
crates/gui/src/platform/: io.rs  paths.rs
crates/gui/src/settings/: mod.rs
crates/gui/src/ui/chrome/: app_menu_bar.rs  modal.rs  popup_surface.rs
crates/gui/src/ui/primitives/: icon.rs
crates/gui/src/views/main/: chunk_map.rs  history.rs  main_window.rs  transfer_row.rs  transfers_list.rs
crates/gui/src/views/overlays/: about_modal.rs  download_modal.rs  mod.rs  notification.rs  toast.rs
crates/gui/src/views/settings/: mod.rs  network.rs
crates/gui/tests/: session_boundary.rs
crates/ophelia-cli/: Cargo.toml
crates/ophelia-cli/src/: main.rs
crates/ophelia-gui/: Cargo.toml  build.rs
crates/ophelia-gui/assets/ophelia_icon_composer.icon/: icon.json
crates/ophelia-gui/locales/: en.yml
crates/ophelia-gui/src/: README.md  app.rs  app_actions.rs  app_menu.rs  assets.rs  engine.rs  engine_bridge.rs  ipc.rs  lib.rs  main.rs  session_services.rs  theme.rs  tray.rs
crates/ophelia-gui/src/platform/: paths.rs
crates/ophelia-gui/src/settings/: destination_presets.rs  mod.rs
crates/ophelia-gui/src/ui/: prelude.rs
crates/ophelia-gui/src/ui/chrome/: window_header.rs
crates/ophelia-gui/src/ui/controls/: button.rs  directory_input.rs  number_input.rs  text_field.rs
crates/ophelia-gui/src/ui/primitives/: file_type_icon.rs  icon.rs  mod.rs  progress_circle.rs
crates/ophelia-gui/src/ui/primitives/resizable/: mod.rs  resize_handle.rs
crates/ophelia-gui/src/updater/: macos.rs  mod.rs
crates/ophelia-gui/src/views/: mod.rs
crates/ophelia-gui/src/views/main/: chunk_map.rs  mod.rs  sidebar.rs  stats_bar.rs  transfer_row.rs  transfers_list.rs  update_button.rs
crates/ophelia-gui/src/views/overlays/: download_modal.rs  notification.rs
crates/ophelia-gui/src/views/settings/: destination_rule_icon_picker.rs  general.rs
crates/ophelia-gui/tests/: i18n.rs
crates/service/: Cargo.toml
crates/service/macos/: nz.ophelia.service.plist
crates/service/src/: main.rs
crates/service/tests/: dev_launchctl_smoke.rs  launchd_smoke.rs
docs/: core-architecture.md  core-bug-ledger.md  core-diagrams.md  core-progress-log.md  core-rewrite-plan.md
locales/: en.yml  zh-CN.yml
scripts/: bundle_macos.sh  checkout_gpui_ce.sh  checkout_gpui_oe.sh  kitty.sh  local_nightly_update_qa.sh  update_manifest.py
src/: README.md  app.rs  app_actions.rs  app_menu.rs  assets.rs  format.rs  ipc.rs  lib.rs  logging.rs  main.rs  settings.rs  theme.rs  tray.rs
src/engine/: actor.rs  alloc.rs  chunk.rs  destination.rs  engine.rs  mod.rs  provider.rs  spec.rs  task.rs  types.rs
src/engine/http/: config.rs  error.rs  health.rs  mod.rs  probe.rs  progress.rs  range_runner.rs  range_worker.rs  ranges.rs  resume.rs  scheduler.rs  single.rs  steal.rs  task.rs  throttle.rs  worker.rs
src/engine/state/: db.rs  http.rs  mod.rs
src/platform/: default.rs  io.rs  macos.rs  mod.rs  paths.rs
src/settings/: destination_presets.rs  mod.rs
src/ui/: app_menu_bar.rs  directory_input.rs  icon.rs  logo.rs  mod.rs  modal.rs  number_input.rs  prelude.rs  text_field.rs  window_header.rs
src/ui/chrome/: app_menu_bar.rs  mod.rs  modal.rs  popup_surface.rs  window_header.rs
src/ui/controls/: button.rs  directory_input.rs  dropdown_select.rs  filter_chip.rs  mod.rs  number_input.rs  segmented_control.rs  switch.rs  text_field.rs
src/ui/primitives/: file_type_icon.rs  icon.rs  logo.rs  mod.rs
src/ui/primitives/resizable/: mod.rs  panel.rs  resize_handle.rs
src/views/: about_modal.rs  download_list.rs  download_modal.rs  download_row.rs  history.rs  main_window.rs  mod.rs  notification.rs  settings_modal.rs  sidebar.rs  stats_bar.rs
src/views/main/: chunk_bitmap.rs  chunk_map.rs  download_list.rs  download_row.rs  history.rs  main_window.rs  mod.rs  sidebar.rs  stats_bar.rs  transfer_row.rs  transfers_list.rs
src/views/overlays/: about_modal.rs  download_modal.rs  mod.rs  notification.rs
src/views/settings/: destination_rule_icon_picker.rs  destinations.rs  general.rs  mod.rs  network.rs
tests/: download_basic.rs  download_concurrency.rs  download_integration.rs  download_known_bugs.rs  download_pause.rs  engine_notifications.rs  i18n.rs
tests/common/: mod.rs
tooling/perf/: Cargo.toml  README.md
tooling/perf/src/: command.rs  criterion.rs  main.rs  model.rs  scenario.rs  table.rs  workspace.rs
tooling/profiling/: Cargo.toml  README.md
tooling/profiling/src/: command.rs  instruments.rs  main.rs  workspace.rs
