[package]
name = "ophelia"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Ophelia"
identifier = "com.ophelia.app"
icon = ["assets/AppIcon.icns"]
category = "public.app-category.utilities"

[dependencies]
futures = "0.3.32"
gpui = { package = "gpui-ce", version = "0.3" }
reqwest = { version = "0.13.2", features = ["stream"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.11.0"
sha2 = "0.11.0"
tempfile = "3.27.0"
wiremock = "0.6.5"
