[package]
name = "ophelia-cli"
version = "0.1.0"
edition = "2024"
description = "Ophelia command line client"
license = "GPL-3.0"

[[bin]]
name = "ophelia"
path = "src/main.rs"

[[bin]]
name = "oph"
path = "src/bin/oph.rs"

[dependencies]
anstyle = "1.0.14"
clap = { version = "4.6.1", features = ["derive"] }
ophelia = { path = "../core" }
serde_json = "1.0.145"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread"] }
