[package]
name = "ophelia"
version = "0.1.0"
edition = "2024"
description = "Ophelia download engine"
license = "GPL-3.0"

[dependencies]
bitvec = "1.0.1"
futures = "0.3.32"
hex = "0.4.3"
libc = "0.2.183"
reqwest = { version = "0.13.2", features = ["blocking", "stream"] }
rusqlite = "0.39.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "fs", "net", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2-foundation = { version = "0.3.2", features = ["NSError", "NSString"] }
objc2-service-management = { version = "0.3.2", default-features = false, features = ["std", "SMAppService", "SMErrors", "objc2", "objc2-foundation"] }

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
proptest = "1.11.0"
tempfile = "3.27.0"
wiremock = "0.6.5"

[[bench]]
name = "http_range_data"
harness = false

[[bench]]
name = "session_events"
harness = false

[[bench]]
name = "disk_data"
harness = false
