[package]
name = "ophelia-gui"
version = "0.1.0"
edition = "2024"
description = "Ophelia GPUI desktop app"
license = "GPL-3.0"
build = "build.rs"

[[bin]]
name = "ophelia"
path = "src/main.rs"

[dependencies]
axum = "0.8.7"
futures = "0.3.32"
gpui = { path = "../../../gpui-oe/crates/gpui" }
gpui_platform = { path = "../../../gpui-oe/crates/gpui_platform", features = ["font-kit"] }
libc = "0.2.183"
minisign-verify = "0.2.4"
ophelia = { path = "../core" }
reqwest = { version = "0.13.2", features = ["blocking", "stream"] }
rust-i18n = "4"
semver = "1.0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
gpui = { path = "../../../gpui-oe/crates/gpui", features = ["test-support"] }
tempfile = "3.27.0"
